<resources>
  <string name="app_name">Dank</string>
  <string name="subreddit_name_r_prefix">r/%s</string>
  <string name="user_name_u_prefix">u/%s</string>
  <string name="comma_separator_for_multiple_words">,</string>
  <string name="and_suffix_for_comma_separated_words">and</string>
  <string name="timestamp_just_now">Just now</string>
  <string name="work_in_progress">Work in progress</string>
  <string name="copy_to_clipboard_confirmation">Ready to be pasted</string>
  <string name="notification_channel_unread_messages">Unread messages</string>
  <string name="notification_channel_unread_messages_id">unread_messages</string>
  <string name="notification_channel_unread_messages_description">Direct messages and comment replies from lesser redditors</string>
  <string name="notification_channel_messaging_comment_replies_id">@string/notification_channel_unread_messages_id</string>
  <string name="notification_channel_media_downloads">Media downloads</string>
  <string name="notification_channel_media_downloads_id">media_downloads</string>
  <string name="notification_channel_media_downloads_description">Image and video downloads</string>
  <string name="notification_channel_debug_notifs_id">debug_notifs</string>
  <string name="common_error_retry">Retry</string>
  <string name="common_emptystate_reload">Reload</string>
  <string name="common_unknown_error_emoji" translatable="false">(╯°□°）╯︵ ┻━┻</string>
  <string name="common_unknown_error_message">Whoops! Something went wrong.</string>
  <string name="common_network_error_emoji" translatable="false">(╯°□°）╯︵ ┻━┻</string>
  <string name="common_network_error_with_reddit_message">Uh oh, Reddit seems to be unreachable.</string>
  <string name="common_network_error_with_other_websites_message">Uh oh, the internet seems to be unreachable.</string>
  <string name="common_reddit_is_down_error_emoji" translatable="false">(ಥ_ಥ)</string>
  <string name="common_reddit_is_down_error_message">You broke Reddit! It\'s under heavy load right now.</string>
  <string name="common_imgur_rate_limit_error_emoji">ಥ_ಥ</string>
  <string name="common_imgur_request_rate_limit_error_message">Dank has reached its monthly limit of downloading images from Imgur.</string>
  <string name="common_imgur_upload_rate_limit_error_message">Dank has reached its monthly limit of uploading images to Imgur.</string>
  <string name="common_error_cancelation_emoji">( ͡° ͜ʖ ͡°)</string>
  <string name="common_error_cancelation_message">Something was intentionally canceled. The user should never see this.</string>
  <string name="common_share_sheet_title">Share with</string>
  <string name="common_error_no_app_found_to_handle_url">No app found to handle url: %s</string>
  <string name="common_error_no_app_found_to_handle_this_action">No app found to handle this action</string>
  <string name="add_launcher_app_shortcuts_label">Add shortcuts</string>
  <string name="login">Login</string>
  <string name="login_logout">Logout</string>
  <string name="login_error_oauth_permission_rejected">You must press \'allow\' to log in with this account</string>
  <string name="login_error_oauth_failed">Failed to login. Please try again.</string>
  <string name="login_welcome_user">Welcome, %s!</string>
  <string name="frontpage_subreddit_name">Frontpage</string>
  <string name="popular_subreddit_name">Popular</string>
  <string name="subreddit_emptystate_emoji" translatable="false">ლ(ಠ益ಠლ)</string>
  <string name="subreddit_emptystate_message">This subreddit is empty</string>
  <string name="subreddit_error_emoji" translatable="false">ლ(ಠ益ಠლ)</string>
  <string name="subreddit_error_private">This subreddit is private. You must \nbe invited to visit this community.</string>
  <string name="subreddit_error_not_found">There doesn\'t seem to be anything here.</string>
  <string name="subreddit_error_failed_to_load_more_submissions">Failed to load more submissions. Tap to retry.</string>
  <string name="subreddit_refreshing_submissions">Refreshing submissions</string>
  <string name="subreddit_error_failed_to_refresh_submissions">Failed to refresh submissions. Tap to retry.</string>
  <string name="subreddit_subscribe">Subscribe</string>
  <string name="subreddit_unsubscribe">Unsubscribe</string>
  <string name="subreddit_menuaction_profile">Profile</string>
  <string name="subreddit_menuaction_preferences">Preferences</string>
  <string name="subreddit_menuaction_refresh_submissions">Refresh submissions</string>
  <string name="cd_close_subreddit">Close subreddit</string>
  <string name="subreddit_submission_item_cd_external_url">Thumbnail for submission URL</string>
  <string name="subreddit_submission_item_cd_self_text">Thumbnail for self-text submission</string>
  <string name="cd_subreddit_submission_item_nsfw_post">Thumbnail for not-safe-for-work submission</string>
  <string name="subreddit_submission_item_byline_comment_count">%s comments</string>
  <string name="cd_subredditpicker_manage_subreddits">Manage subreddits</string>
  <string name="cd_subredditpicker_add_new_subreddit">Add new subreddit</string>
  <string name="cd_subredditpicker_more_options">More options</string>
  <string name="cd_subredditpicker_save_changes">Save changes</string>
  <string name="subredditpicker_set_as_default">Set as default</string>
  <string name="subredditpicker_unsubscribe">Unsubscribe</string>
  <string name="subredditpicker_remove">Remove</string>
  <string name="subredditpicker_hide">Hide</string>
  <string name="subredditpicker_unhide">Unhide</string>
  <string name="subredditpicker_refresh">Refresh</string>
  <string name="subredditpicker_show_hidden">Show hidden</string>
  <string name="subredditpicker_hide_hidden">Hide hidden</string>
  <string name="subredditpicker_search_hint_go_to_subreddit">Go to subreddit…</string>
  <string name="newsubredditdialog_title">Subscribe to</string>
  <string name="newsubredditdialog_subscribe">Subscribe</string>
  <string name="newsubredditdialog_subreddit_hint">subreddit</string>
  <string name="newsubredditdialog_cancel">Cancel</string>
  <string name="newsubredditdialog_error_empty_field">This can\'t be empty ಠ_ಠ</string>
  <string name="newsubredditdialog_error_private_subreddit">You don\'t have access to this subreddit (ಠ_ಠ)</string>
  <string name="newsubredditdialog_error_subreddit_doesnt_exist">Couldn\'t find this subreddit (ಥ_ಥ)</string>
  <string name="newsubredditdialog_error_unknown">Something went wrong (╯°□°）╯︵ ┻━┻</string>
  <string name="submission_option_share">Share</string>
  <string name="cd_submission_option_share_reddit_link">Share reddit comments link</string>
  <string name="cd_submission_option_share_content_link">Share content link</string>
  <string name="submission_option_copy">Copy link</string>
  <string name="cd_submission_option_copy_reddit_link">Copy reddit comments link</string>
  <string name="cd_submission_option_copy_content_link">Copy content link</string>
  <string name="submission_option_reddit_link">Reddit comments</string>
  <string name="submission_option_content_link">Content</string>
  <string name="subreddit_sorting_mode" translatable="false">%s</string>
  <string name="subreddit_sorting_mode_with_time_period" translatable="false">%1$s (%2$s)</string>
  <string name="sorting_mode_hot">Hot</string>
  <string name="sorting_mode_new">New</string>
  <string name="sorting_mode_rising">Rising</string>
  <string name="sorting_mode_controversial">Controversial</string>
  <string name="sorting_mode_top">Top</string>
  <string name="sorting_time_period_hour">Hour</string>
  <string name="sorting_time_period_day">Day</string>
  <string name="sorting_time_period_week">Week</string>
  <string name="sorting_time_period_month">Month</string>
  <string name="sorting_time_period_year">Year</string>
  <string name="sorting_time_period_alltime">All time</string>
  <string name="subreddit_submission_swipe_action_save">Save</string>
  <string name="subreddit_submission_swipe_action_unsave">Unsave</string>
  <string name="subreddit_submission_swipe_action_options">Options</string>
  <string name="subreddit_submission_swipe_action_upvote">Upvote</string>
  <string name="subreddit_submission_swipe_action_downvote">Downvote</string>
  <string name="userprofile_comments">Comments</string>
  <string name="userprofile_submissions">Submissions</string>
  <string name="userprofile_karma_count">%s karma</string>
  <string name="userprofile_loading_karma">Loading karma…</string>
  <string name="userprofile_error_user_karma_load">Couldn\'t get karma</string>
  <string name="userprofile_confirm_logout">Confirm logout?</string>
  <string name="userprofile_logging_out">Logging out…</string>
  <string name="userprofile_messages">Messages</string>
  <string name="userprofile_unread_messages_count_single">%d new message</string>
  <string name="userprofile_unread_messages_count_99_or_less">%d new messages</string>
  <string name="userprofile_unread_messages_count_99_plus">99+ new messages</string>
  <string name="submission_loading_comments">Loading comments…</string>
  <string name="submission_load_more_comments">Load %d more comments</string>
  <string name="submission_loading_more_comments">Loading more comments…</string>
  <string name="submission_error_failed_to_load_more_comments">Failed to load more comments</string>
  <string name="submission_continue_this_thread">Continue this thread</string>
  <string name="submission_link_loading">Loading…</string>
  <string name="submission_link_tap_to_open_profile">Tap to open profile</string>
  <string name="submission_link_tap_to_open_subreddit">Tap to open subreddit</string>
  <string name="submission_link_tap_to_open_submission">Tap to open submission</string>
  <string name="submission_link_tap_to_open_link">Tap to open link</string>
  <string name="submission_link_linked_profile">Linked profile</string>
  <string name="inbox_empty_state_title" translatable="false">ᕕ( ᐛ )ᕗ</string>
  <string name="inbox_empty_state_message_for_username_mentions">You don\'t have any username mentions.</string>
  <string name="userprefs_group_subreddit">Subreddit</string>
  <string name="userprefs_submission_thumbnails">Submission thumbnails</string>
  <string name="userprefs_submission_thumbnail_summary_on">Show if available</string>
  <string name="userprefs_group_gestures">Gestures</string>
  <string name="userprefs_customize_submission_gestures">Submission gesture actions</string>
  <string name="userprefs_customize_comment_gestures">Comment gesture actions</string>
  <string name="cd_textformat_bold">Bold</string>
  <string name="cd_textformat_italic">Italic</string>
  <string name="cd_textformat_insert_link">Insert link</string>
  <string name="cd_textformat_insert_text_emoji">Insert text emoji</string>
  <string name="cd_textformat_insert_image">Upload image</string>
  <string name="cd_textformat_insert_gif">Insert GIF</string>
  <string name="textformat_text_face" translatable="false">ಠ_ಠ</string>
  <string name="cd_textformat_strikethrough">Strikethrough</string>
  <string name="cd_textformat_quote">Quote</string>
  <string name="cd_textformat_code">Preformatted code</string>
  <string name="cd_textformat_header">Header</string>
  <string name="composereply_addlink_title">Title</string>
  <string name="composereply_addlink_url">URL</string>
  <string name="composereply_addlink_cancel">Cancel</string>
  <string name="composereply_addlink_insert">Insert</string>
  <string name="composereply_paste_from_clipboard_hint">Tap to paste URL from clipboard\n%s</string>
  <string name="composereply_uploadimage_title">Add title (optional)</string>
  <string name="composereply_uploadimage_cancel">Cancel</string>
  <string name="composereply_uploadimage_insert">Insert</string>
  <string name="cd_composereply_uploadimage_image_being_uploaded">Image being uploaded</string>
  <string name="composereply_uploadimage_uploading">Uploading…</string>
</resources>