<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/errorstate_emoji"
        style="@style/EmptyStateEmoji"
        android:layout_marginBottom="@dimen/spacing8"
        tools:text="@string/inbox_empty_state_title" />

    <TextView
        android:id="@+id/errorstate_message"
        style="@style/EmptyStateMessage"
        android:layout_marginTop="@dimen/spacing4"
        tools:text="@string/inbox_empty_state_message_for_username_mentions" />

    <Button
        android:id="@+id/errorstate_retry"
        style="@style/DankButton.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing8"
        android:text="@string/common_error_retry" />
</LinearLayout>
