<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/spacing12"
  android:orientation="vertical">

  <android.support.design.widget.TextInputLayout
    android:id="@+id/addlinkdialog_title_inputlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing4"
    android:layout_marginStart="@dimen/spacing16"
    android:layout_marginEnd="@dimen/spacing16"
    android:paddingStart="@dimen/spacing4"
    android:paddingEnd="@dimen/spacing4">

    <EditText
      android:id="@+id/addlinkdialog_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/composereply_addlink_title"
      android:imeOptions="actionNext"
      android:maxLines="1" />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/addlinkdialog_url_inputlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing16"
    android:layout_marginEnd="@dimen/spacing16"
    android:paddingStart="@dimen/spacing4"
    android:paddingEnd="@dimen/spacing4">

    <EditText
      android:id="@+id/addlinkdialog_url"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/composereply_addlink_url"
      android:inputType="textUri" />
  </android.support.design.widget.TextInputLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing24"
    android:id="@+id/addlinkdialog_paste_from_clipboard_hint"
    android:layout_marginEnd="@dimen/spacing24"
    android:paddingTop="@dimen/spacing8"
    android:paddingBottom="@dimen/spacing12"
    android:paddingStart="@dimen/spacing12"
    android:paddingEnd="@dimen/spacing12"
    android:background="@drawable/background_addlink_paste_from_clipboard_offer"
    android:ellipsize="middle"
    android:clickable="true"
    android:focusable="true"
    android:maxLines="2"
    android:text="@string/composereply_paste_from_clipboard_hint" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing8"
    android:layout_marginBottom="@dimen/spacing8"
    android:layout_marginStart="@dimen/spacing12"
    android:layout_marginEnd="@dimen/spacing12"
    android:gravity="end">

    <Button
      android:id="@+id/addlinkdialog_cancel"
      style="?attr/buttonBarNegativeButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/composereply_addlink_cancel"
      android:textColor="@color/gray_500" />

    <Button
      android:id="@+id/addlinkdialog_insert"
      style="?attr/buttonBarPositiveButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/composereply_addlink_insert" />
  </LinearLayout>
</LinearLayout>
