<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal">

  <FrameLayout
    android:id="@+id/uploadimage_image_container"
    android:layout_width="120dp"
    android:layout_height="match_parent"
    android:layout_alignBottom="@+id/uploadimage_button_container">

    <ImageView
      android:id="@+id/uploadimage_image"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/gray_700"
      android:contentDescription="@string/cd_composereply_uploadimage_image_being_uploaded"
      android:scaleType="centerCrop"
      android:tint="@color/black_opacity_30" />

    <it.gilvegliach.android.transparenttexttextview.TransparentTextTextView
      android:id="@+id/uploadimage_file_size"
      style="@style/DankProgressBarFileSize"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal|bottom"
      android:layout_marginBottom="16dp"
      android:visibility="invisible" />
  </FrameLayout>

  <me.saket.dank.widgets.ViewFlipperWithDebugPreview
    android:id="@+id/uploadimage_state_viewflipper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_toEndOf="@+id/uploadimage_image_container"
    android:inAnimation="@anim/uploadimage_slide_and_fade_in_from_bottom"
    android:outAnimation="@anim/uploadimage_slide_and_fade_out_to_top"
    app:debug_displayedChild="2">

    <LinearLayout
      android:id="@+id/uploadimage_state_in_flight"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:orientation="vertical"
      android:paddingEnd="@dimen/spacing16"
      android:paddingStart="@dimen/spacing16">

      <TextView
        android:id="@+id/uploadimage_upload_progress_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing4"
        android:layout_marginStart="@dimen/spacing4"
        android:layout_marginTop="@dimen/spacing8"
        android:text="@string/composereply_uploadimage_uploading"
        android:textSize="@dimen/textsize18"
        tools:ignore="LabelFor,TextFields" />

      <me.saket.dank.widgets.AnimatedProgressBar
        android:id="@+id/uploadimage_upload_progress_bar"
        style="@style/DankProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing4"
        android:layout_marginStart="@dimen/spacing4" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/uploadimage_state_uploaded"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingEnd="@dimen/spacing16"
      android:paddingStart="@dimen/spacing16"
      android:paddingTop="@dimen/spacing8">

      <!-- Dummy View to prevent focus from reaching to title field. -->
      <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:ignore="LabelFor,TextFields" />

      <EditText
        android:id="@+id/uploadimage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/composereply_uploadimage_title"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:maxLines="1" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uploadimage_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing4"
        android:layout_marginStart="@dimen/spacing4"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="@dimen/textsize18"
        tools:ignore="LabelFor,TextFields"
        tools:text="i.imgur.com/mPW5MRs.jpg" />
    </LinearLayout>

    <TextView
      android:id="@+id/uploadimage_state_failed_tap_to_retry"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:focusable="true"
      android:foreground="?attr/selectableItemBackground"
      android:padding="@dimen/spacing16"
      android:textColor="@color/error_text_color"
      tools:ignore="SelectableText"
      tools:text="(╯°□°）╯︵ ┻━┻ \n\nFailed to upload image. Tap to retry." />
  </me.saket.dank.widgets.ViewFlipperWithDebugPreview>

  <LinearLayout
    android:id="@+id/uploadimage_button_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/uploadimage_state_viewflipper"
    android:layout_toEndOf="@+id/uploadimage_image_container"
    android:gravity="end"
    android:paddingEnd="@dimen/spacing4"
    android:paddingStart="@dimen/spacing4"
    android:paddingTop="@dimen/spacing8">

    <Button
      android:id="@+id/uploadimage_cancel"
      style="?attr/buttonBarNegativeButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/composereply_uploadimage_cancel"
      android:textColor="@color/gray_500" />

    <Button
      android:id="@+id/uploadimage_insert"
      style="?attr/buttonBarPositiveButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:text="@string/composereply_uploadimage_insert" />
  </LinearLayout>
</RelativeLayout>
